# alpha-ops-workbench

./: .env.example  .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
alphaops/: __init__.py  cli.py  config.py
alphaops/agents/: __init__.py  orchestrator.py
alphaops/data/: __init__.py  contracts.py  hub.py  ingest.py  lineage.py  quality.py
alphaops/evals/: __init__.py  cases.py
alphaops/lifecycle/: __init__.py  factory.py  registry.py  rules.py
alphaops/quant/: __init__.py  alpha_dsl.py  backtest.py  costs.py  evaluation.py  factors.py  ic.py  metrics.py  returns.py  universe.py
alphaops/reports/: __init__.py  renderer.py
alphaops/risk/: __init__.py  critic.py
alphaops/storage/: duckdb.py  schema.sql
alphaops/synthetic/: __init__.py  engine.py
alphaops/tools/: __init__.py  registry.py  schema.py
apps/api_fastapi/: __init__.py  main.py
apps/dashboard_streamlit/: Home.py  __init__.py
docs/: DEMO_GUIDE.md  GITHUB_RELEASE_CHECKLIST.md  PROJECT_MANUAL.md  ROADMAP.md  USER_GUIDE.md
examples/full_product_demo/: README.md
scripts/: check_public_boundary.py
scripts/windows/: configure-local-secrets.ps1  init.ps1  install-from-wheel.ps1  install.ps1  smoke.ps1  start-api.ps1  start-ui.ps1
tests/: test_cli.py  test_config.py  test_local_env.py
tests/agents/: test_orchestrator.py
tests/data/: test_adapters.py  test_alpaca_adapter.py  test_contracts.py  test_ingest.py  test_lineage.py  test_massive_adapter.py  test_quality.py
tests/docs/: test_docs_links.py
tests/evals/: test_cases.py
(+51 files in other folders)
