[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaops-workbench"
version = "0.1.0"
description = "Full-scope quant research workbench with multi-asset data contracts and agent orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "AlphaOps Workbench Contributors" }]
dependencies = [
  "duckdb>=0.10",
  "fastapi>=0.111",
  "pandas>=2.2",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "streamlit>=1.35",
  "uvicorn>=0.30",
  "alpaca-py>=0.43",
  "yfinance>=0.2",
]

[project.scripts]
alphaops = "alphaops.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "build>=1.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["alphaops*", "apps*"]

[tool.setuptools.package-data]
"alphaops.storage" = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
